@@ -1,0 +1,3 @@
+0.01 0.0
+0.50 0.5
+0.17 0.2
